selfhost/test/typechecker/return/error_location.out
Error at %FILE_NAME%:1:1
Invalid location for return statement
  |  return 123
     ^
Return statements can only be used within function bodies
